--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,4 @@
 {
   "go.enable": true,
-  "clangd.path": "/home/walac/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd"
+  "clangd.fallbackFlags": ["-std=c++17"]
 }
