--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,10 @@
 {
   "go.enable": true,
-  "clangd.fallbackFlags": ["-std=c++17"]
+  "clangd.fallbackFlags": [
+    "-std=c++17"
+  ],
+  "clangd.arguments": [
+    "--clang-tidy"
+  ],
+  "clangd.semanticHighlighting": true
 }
