New clangd options and support for SourceTrail

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,6 +4,10 @@
     "-std=c++17"
   ],
   "clangd.arguments": [
+    "--log=error",
+    "--header-insertion=iwyu",
+    "--completion-style=detailed",
+    "--background-index",
     "--clang-tidy"
   ],
   "clangd.semanticHighlighting": true
