Upgrade configs for python support.
Code formatting on save for python, yay!

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,5 +14,6 @@
     "--background-index",
     "--clang-tidy"
   ],
-  "clangd.semanticHighlighting": true
+  "clangd.semanticHighlighting": true,
+  "python.formatting.provider": "yapf"
 }
