Do not auto-insert the include files.

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -12,6 +12,7 @@
     "--header-insertion=iwyu",
     "--completion-style=detailed",
     "--background-index",
+    "--header-insertion=never",
     "--clang-tidy"
   ],
   "python.formatting.provider": "yapf"
