--- a/coc-settings.json
+++ b/coc-settings.json
@@ -19,7 +19,9 @@
   "coc.preferences.enableLinkedEditing": true,
   "inlayHint.enable": false,
   "semanticTokens.enable": true,
-  "python.formatting.provider": "yapf",
+  "python.formatting.provider": "ruff",
+  "python.linting.ruffEnabled": true,
+  "python.analysis.typeCheckingMode": "standard",
   "python.analysis.autoSearchPaths": true,
   "python.analysis.useLibraryCodeForTypes": true,
   "python.analysis.indexing": true,
